ecommerce - products and users apis